[workspace]
members = [
    "auth",
    "base",
    "derive",
    "note",
    "notify",
    "user",
]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "./base" }
auth = { path = "./auth" }
note = { path = "./note" }
notify = { path = "./notify" }
user = { path = "./user" }

actix = "0.13"
actix-web = "4.0.1"
actix-cors = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.16"

diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.136", features = ["derive"] }

[profile.dev]
opt-level = "z"
debug = false
