[workspace]
members = [
    "auth",
    "base",
    "derive",
    "note",
    "notify",
    "user",
]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-web = "4.2.1"
base64 = "0.21.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.17"

[dependencies]
base = { path = "./base" }
auth = { path = "./auth" }
note = { path = "./note" }
notify = { path = "./notify" }
user = { path = "./user" }

actix = "0.13"
actix-web.workspace = true
actix-cors = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log.workspace = true

diesel.workspace = true

[profile.dev]
opt-level = "z"
debug = false
