[workspace]
members = [
    "auth",
    "base",
    "derive",
    "note",
    "notify",
    "test_helpers",
    "user",
]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
base = { path = "./base" }
test_helpers = { path = "./test_helpers" }

actix-web = "4.2.1"
actix = "0.13"
base64 = "0.21.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.17"
rand = "0.8.5"

[dependencies]
base.workspace = true
auth = { path = "./auth" }
note = { path = "./note" }
notify = { path = "./notify" }
user = { path = "./user" }

actix.workspace = true
actix-web.workspace = true
actix-cors = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log.workspace = true

diesel.workspace = true

[profile.dev]
opt-level = "s"
debug = false
