[package]
name = "iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../reax/base" }
note = { path = "../reax/note" }

env_logger = "0.9.0"
log = "0.4.16"
once_cell = "1.10.0"

iced = { version = "0.4.2", features = ["tokio"] }
reqwest = { version = "0.11.10", features = ["rustls-tls", "json"], default-features = false }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.17.0", features = ["full"] }

[profile.dev]
opt-level = "z"
debug = false
debug-assertions = false
