[workspace]
members = [
    "android",
    "ios",
    "wasm",
    "auth",
    "base",
    "note",
    "notify",
    "runtime",
]

[package]
name = "reax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
debug = false

[profile.release]
opt-level = "z"
lto = true
