[workspace]
members = [
    "android",
    "ios",
    "wasm",
    "base",
    "note",
    "notify",
    "runtime",
]

[package]
name = "reax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
bincode = "1.3.3"
log = "0.4.17"
once_cell = "1.17.0"

reqwest = { version = "0.11.14", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1.24.2", features = ["sync"], default-features = false }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "json"] }
serde = { version = "1.0.152", features = ["derive"] }

[dependencies]


[profile.dev]
opt-level = "z"
debug = false

[profile.release]
opt-level = "z"
lto = true
