[workspace]
members = [
    "android",
    "ios",
    "wasm",
    "base",
    "note",
    "notify",
    "runtime",
    "universal",
]

[package]
name = "reax"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
base = { path = "./base" }
note = { path = "./note" }
runtime = { path = "./runtime" }
universal = { path = "./universal" }

bincode = "1.3.3"
log = "0.4.17"
once_cell = "1.17.0"

reqwest = { version = "0.11.14", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1.24.2", features = ["sync"], default-features = false }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono"] }
serde = { version = "1.0.152", features = ["derive"] }

[dependencies]
note = { path = "./note", features = ["storage"] }

[profile.dev]
opt-level = "s"
debug = false

[profile.release]
lto = true
