[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
derive = { path = "../derive" }

rand = "0.8.5"

actix-web.workspace = true
base64.workspace = true
chrono.workspace = true
diesel.workspace = true
serde.workspace = true
