[package]
name = "base"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
htmlescape = "0.3.1"
futures = "0.3.21"
jsonwebtoken = "8.1.0"
ring = "0.16.20"
log.workspace = true

actix-web.workspace = true
askama.workspace = true
chrono.workspace = true
diesel.workspace = true
serde.workspace = true
