[package]
name = "note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
derive = { path = "../derive" }

actix-web = "4.0.1"

chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono"] }
serde = { version = "1.0.136", features = ["derive"] }
