[package]
name = "note"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
derive = { path = "../derive" }
user = { path = "../user" }
notify = { path = "../notify" }
test_helpers.workspace = true

actix-web.workspace = true

log.workspace = true

chrono.workspace = true
diesel.workspace = true
serde.workspace = true
