[package]
name = "notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3.1.1", features = ["rustls"] }
actix-web-actors = "4.0.1"
serde_json = "1.0.102"

actix.workspace = true
log.workspace = true
serde.workspace = true
