[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
derive = { path = "../derive" }

actix-web.workspace = true
futures = "0.3.21"

chrono.workspace = true
diesel.workspace = true
serde.workspace = true
