[package]
name = "user"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
derive = { path = "../derive" }
notify = { path = "../notify" }
test_helpers.workspace = true

actix-web.workspace = true
askama.workspace = true
futures = "0.3.21"

chrono.workspace = true
diesel.workspace = true
rand.workspace = true
serde.workspace = true
