[package]
name = "android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { path = "../auth" }
base = { path = "../base" }
note = { path = "../note" }
notify = { path = "../notify" }
runtime = { path = "../runtime" }

bincode = "1.3.3"
log = "0.4.16"
libc = "0.2.125"
once_cell = "1.10.0"

jni = { version = "0.19.0", default-features = false }
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.17.0", features = ["full"] }

[lib]
name = "reax"
crate-type = ["cdylib"]
