[package]
name = "android"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
note = { path = "../note", features = ["storage"] }
notify = { path = "../notify" }
runtime = { path = "../runtime" }

bincode.workspace = true
log.workspace = true
libc = "0.2.125"
once_cell.workspace = true

jni = { version = "0.19.0", default-features = false }
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lib]
name = "reax"
crate-type = ["cdylib"]
