[package]
name = "android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universal.workspace = true

log.workspace = true
libc = "0.2.125"
jni = { version = "0.21.1", default-features = false }

[lib]
name = "reax"
crate-type = ["cdylib"]
