[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
runtime = { path = "../runtime" }

log = "0.4.16"
serde_json = "1.0.79"

reqwest = { version = "0.11.10", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
