[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "sqlite" ] }
