[package]
name = "ios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
auth = { path = "../auth" }
note = { path = "../note" }
runtime = { path = "../runtime" }

bincode = "1.3.3"
env_logger = "0.9.0"
log = "0.4.16"
once_cell = "1.10.0"

serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.17.0", features = ["full"] }

[lib]
crate-type= ["staticlib"]
