[package]
name = "ios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
note = { path = "../note", features = ["storage"]}
notify = { path = "../notify" }
runtime = { path = "../runtime" }
universal = { path = "../universal" }

bincode.workspace = true
env_logger = "0.9.0"
log.workspace = true
once_cell.workspace = true

serde.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lib]
name = "reax"
crate-type= ["staticlib"]
