[package]
name = "note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
runtime = { path = "../runtime" }

aes-gcm-siv = "0.11.1"
base64ct = { version = "1.5.2", features = ["alloc"]}

log.workspace = true
once_cell.workspace = true
serde_json = "1.0.91"
itertools = "0.10.5"

reqwest.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
tokio.workspace = true

[features]
storage = ["dep:sqlx"]
