[package]
name = "note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
runtime = { path = "../runtime" }

log.workspace = true
once_cell.workspace = true
serde_json = "1.0.91"
itertools = "0.10.5"

reqwest.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
tokio.workspace = true

x25519-dalek = "1.2.0"
rand = { version = "0.7.3", features = ["getrandom"] }
base64ct = {version = "1.5.3", features = ["alloc"] }

[features]
storage = ["dep:sqlx"]
