[package]
name = "notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
runtime = { path = "../runtime" }

once_cell = "1.11.0"
log = "0.4.16"

futures-util = "0.3.21"
tokio-tungstenite = "0.17.1"

tokio = { version = "1.18.2", features = ["sync"], default-features = false }
