[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
log = "0.4.16"

tokio = { version = "1.17.0", features = ["full"] }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "sqlite" ] }
