[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

once_cell = "1.10.0"
log = "0.4.16"

reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.17.0", features = ["full"] }
