[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

anymap = "0.12.1"
once_cell = "1.10.0"
log = "0.4.16"

reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
