[package]
name = "universal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
note.workspace = true
runtime.workspace = true

bincode.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
