[package]
name = "mavinote-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
account = { path = "../account" }
runtime = { path = "../runtime" }

log = "0.4.16"

bincode = "1.3.3"
serde = "1.0.144"
once_cell = "1.11.0"

futures = "0.3.24"
js-sys = "0.3.59"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.7"

tokio = { version = "1.18.2", features = ["sync"], default-features = false }
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
