[package]
name = "mavinote-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
runtime = { path = "../runtime" }
note = { path = "../note" }

aes-gcm-siv = "0.11.1"
# need to enable `js` feature of getrandom to compile it for wasm32-unknown-unknown. `getrandom` is used by aes-gcm-siv
# for more information https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }


bincode = "1.3.3"

log.workspace = true
reqwest.workspace = true
once_cell.workspace = true
serde.workspace = true
tokio.workspace = true

futures = "0.3.24"
js-sys = "0.3.59"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.7"
